--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,131 +27,85 @@ jobs:
       - name: Build JAR
         run: mvn clean package -DskipTests
 
-      - name: Setup SSH
+      - name: Setup SSH with RSA Key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          # FORMA CORRECTA para clave RSA
+          cat > ~/.ssh/id_rsa << 'RSAKEY'
+          ${{ secrets.EC2_SSH_KEY }}
+          RSAKEY
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
           
-          # Verificar la clave
-          echo "=== Verificación SSH ==="
-          ls -la ~/.ssh/
-          echo "Primera línea clave: $(head -1 ~/.ssh/id_rsa)"
+          echo "=== Verificando clave RSA ==="
+          head -2 ~/.ssh/id_rsa
 
       - name: Test SSH Connection
         run: |
-          echo "=== Probando conexión a $EC2_HOST ==="
+          echo "=== Probando conexión SSH ==="
           ssh -i ~/.ssh/id_rsa \
               -o StrictHostKeyChecking=no \
-              -o ConnectTimeout=10 \
-              ec2-user@$EC2_HOST "echo '✅ SSH exitoso - Conectado a EC2'"
+              -o ConnectTimeout=15 \
+              ec2-user@$EC2_HOST "echo '✅ Conexión SSH exitosa - Clave RSA funciona'"
 
-      - name: Prepare EC2 Directories
+      - name: Prepare EC2
         run: |
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@$EC2_HOST "
-            echo '=== Preparando directorios en EC2 ==='
             mkdir -p /home/ec2-user/$SERVICE_NAME/backup
-            echo 'Directorios listos para $SERVICE_NAME'
+            echo '✅ Directorios listos en EC2'
           "
 
-      - name: Deploy Application
+      - name: Deploy to EC2
         run: |
-          echo "=== Subiendo JAR a EC2 ==="
+          # Subir JAR
           scp -i ~/.ssh/id_rsa \
                -o StrictHostKeyChecking=no \
                target/*.jar \
                ec2-user@$EC2_HOST:/home/ec2-user/$SERVICE_NAME/
           
-          echo "✅ JAR transferido exitosamente"
-
-      - name: Start Service on EC2
-        run: |
+          echo "✅ JAR transferido a EC2"
+          
+          # Ejecutar en EC2
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@$EC2_HOST "
             cd /home/ec2-user/$SERVICE_NAME
             
-            echo '=== Iniciando despliegue de $SERVICE_NAME ==='
+            echo '=== Iniciando despliegue ==='
             
-            # 1. Backup del JAR anterior
+            # Backup
             if ls *.jar > /dev/null 2>&1; then
-              echo 'Creando backup...'
               mkdir -p backup
               mv *.jar backup/
-              echo '✅ Backup completado'
+              echo '✅ Backup creado'
             fi
             
-            # 2. Detener servicio existente
+            # Detener servicio
             echo 'Deteniendo servicio anterior...'
-            pkill -f 'java.*$SERVICE_NAME' || echo 'No había servicio ejecutándose'
-            sleep 3
+            pkill -f 'java.*$SERVICE_NAME' || echo 'No había servicio activo'
+            sleep 5
             
-            # 3. Liberar puerto si está ocupado
-            echo 'Verificando puerto $SERVICE_PORT...'
+            # Liberar puerto
             PORT_PID=\$(lsof -ti:$SERVICE_PORT 2>/dev/null || echo '')
             if [ ! -z \"\$PORT_PID\" ]; then
-              echo \"Forzando liberación de puerto - PID: \$PORT_PID\"
               kill -9 \$PORT_PID
-              sleep 2
+              sleep 3
             fi
             
-            # 4. Iniciar nuevo servicio
+            # Iniciar servicio
             echo 'Iniciando $SERVICE_NAME en puerto $SERVICE_PORT...'
             nohup java -jar *.jar --server.port=$SERVICE_PORT --server.address=0.0.0.0 > app.log 2>&1 &
-            APP_PID=\$!
-            echo \"✅ Servicio iniciado - PID: \$APP_PID\"
+            echo \"✅ Servicio iniciado - PID: \$!\"
             
-            # 5. Esperar y verificar
-            echo 'Esperando inicio del servicio (25 segundos)...'
-            sleep 25
+            # Esperar
+            sleep 30
             
-            # 6. Verificación final
-            echo '=== Verificando despliegue ==='
+            # Verificar
             if ss -tuln | grep -q \":$SERVICE_PORT\"; then
-              echo '🎉 🎉 🎉 DESPLIEGUE EXITOSO 🎉 🎉 🎉'
-              echo 'Servicio: $SERVICE_NAME'
-              echo 'Puerto: $SERVICE_PORT'
-              echo 'PID: \$APP_PID'
-              echo '--- Últimas líneas del log ---'
-              tail -5 app.log
+              echo '🎉 DESPLIEGUE EXITOSO'
+              echo 'URL: http://$EC2_HOST:$SERVICE_PORT'
             else
-              echo '❌ ERROR: El servicio no se inició correctamente'
-              echo '--- Log completo ---'
+              echo '❌ Falla en despliegue'
+              echo 'Logs:'
               cat app.log
-              echo '--- Estado del proceso ---'
-              ps -p \$APP_PID >/dev/null && echo 'Proceso activo' || echo 'Proceso no encontrado'
-              exit 1
-            fi
-          "
-
-      - name: Final Health Check
-        run: |
-          echo "=== Verificación de salud final ==="
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@$EC2_HOST "
-            echo '📊 Estado del sistema:'
-            echo '--- Servicios activos ---'
-            ps aux | grep java | grep -v grep | while read line; do
-              echo \"  📍 \$line\"
-            done || echo '  No hay servicios Java activos'
-            
-            echo ''
-            echo '--- Puertos en escucha ---'
-            ss -tuln | grep -E ':(8080|8081|8082|8083|8084)' | while read line; do
-              echo \"  🔵 \$line\"
-            done || echo '  No hay puertos de microservicios'
-            
-            echo ''
-            echo '--- Recursos del sistema ---'
-            echo \"  💾 Memoria: \$(free -h | grep Mem | awk '{print \$3\"/\"\$2}')\"
-            echo \"  💿 Disco: \$(df -h /home/ec2-user | tail -1 | awk '{print \$3\"/\"\$2}')\"
-            
-            echo ''
-            echo '=== ESTADO FINAL ==='
-            if ss -tuln | grep -q \":$SERVICE_PORT\"; then
-              echo '✅ ✅ ✅ $SERVICE_NAME DESPLEGADO CORRECTAMENTE ✅ ✅ ✅'
-              echo '📍 Puerto: $SERVICE_PORT'
-              echo '🌐 URL: http://$EC2_HOST:$SERVICE_PORT'
-            else
-              echo '❌ $SERVICE_NAME NO ESTÁ EJECUTÁNDOSE'
               exit 1
             fi
           "
