--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,33 +35,16 @@ jobs:
 
       - name: Test SSH Connection
         run: |
-          echo "Testing SSH connection to ${{ secrets.EC2_DNS }}..."
-          ssh -i ~/.ssh/id_rsa \
-              -o StrictHostKeyChecking=no \
-              -o ConnectTimeout=10 \
-              ec2-user@${{ secrets.EC2_DNS }} "echo '✅ SSH connection successful'"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "echo '✅ SSH Success'"
 
-      - name: Deploy Application
+      - name: Deploy
         run: |
-          # Upload JAR
-          scp -i ~/.ssh/id_rsa \
-              -o StrictHostKeyChecking=no \
-              target/*.jar \
-              ec2-user@${{ secrets.EC2_DNS }}:/home/ec2-user/$SERVICE_NAME/
-          
-          # Deploy
-          ssh -i ~/.ssh/id_rsa \
-              -o StrictHostKeyChecking=no \
-              ec2-user@${{ secrets.EC2_DNS }} "
+          scp -i ~/.ssh/id_rsa target/*.jar ec2-user@${{ secrets.EC2_DNS }}:/home/ec2-user/$SERVICE_NAME/
+          ssh -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_DNS }} "
             cd /home/ec2-user/$SERVICE_NAME
             pkill -f java || true
             sleep 5
-            nohup java -jar *.jar --server.port=$SERVICE_PORT --server.address=0.0.0.0 > app.log 2>&1 &
+            nohup java -jar *.jar --server.port=$SERVICE_PORT > app.log 2>&1 &
             sleep 30
-            if ss -tuln | grep -q ':$SERVICE_PORT'; then
-              echo '✅ Deployment successful'
-            else
-              echo '❌ Deployment failed'
-              exit 1
-            fi
+            ss -tuln | grep ':$SERVICE_PORT' && echo '✅ Deployed' || echo '❌ Failed'
           "
