--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 spring.application.name=paquetes
 
 
-spring.datasource.url=jdbc:mysql://idmusic.cxucg4w4qfc4.us-east-2.rds.amazonaws.com:3306/IDMUSIC?useSSL=false&serverTimezone=UTC
-spring.datasource.username=IDMUSIC
-spring.datasource.password=IDMUSIC-COTIZADOR
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-server.port=8081
+server.port=${SERVER_PORT}  # Se pasa al arrancar
 server.address=0.0.0.0
 
-logging.file.name=logs/paquetes.log
+logging.file.name=logs/${spring.application.name}.log
 logging.level.org.springframework=INFO
 logging.level.com.tu.paquete=DEBUG
