--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,9 @@ jobs:
           echo "=== Starting deployment ==="
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
             set -x
-          
+
             cd /home/ec2-user/$SERVICE_NAME
-          
+
             echo '1. Checking current processes on port $SERVICE_PORT...'
             PORT_PID=\$(lsof -ti:$SERVICE_PORT 2>/dev/null || echo '')
             if [ ! -z \"\$PORT_PID\" ]; then
@@ -65,15 +65,21 @@ jobs:
             else
               echo 'No process found on port $SERVICE_PORT'
             fi
-          
-            echo '2. Starting application...'
-            nohup java -jar *.jar --server.port=$SERVICE_PORT --server.address=0.0.0.0 > app.log 2>&1 &
+
+            echo '2. Starting application with database environment variables...'
+            nohup java -jar *.jar \
+              --server.port=$SERVICE_PORT \
+              --server.address=0.0.0.0 \
+              --spring.datasource.url=$DB_URL \
+              --spring.datasource.username=$DB_USERNAME \
+              --spring.datasource.password=$DB_PASSWORD \
+              > app.log 2>&1 &
             APP_PID=\$!
             echo \"Application started with PID: \$APP_PID\"
-          
+
             echo '3. Waiting for startup...'
             sleep 15
-          
+
             echo '4. Checking if application is running...'
             if ps -p \$APP_PID > /dev/null; then
               echo '✅ Application process is running'
@@ -83,7 +89,7 @@ jobs:
               cat app.log
               exit 1
             fi
-          
+
             echo '5. Checking port...'
             if ss -tuln | grep -q \":$SERVICE_PORT\"; then
               echo '✅ Port $SERVICE_PORT is listening'
@@ -94,7 +100,7 @@ jobs:
               cat app.log
               exit 1
             fi
-          
+
             set +x
           "
 
