--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=paquetes
+spring.application.name=Paquetes
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
