--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         env:
           IMAGE: ghcr.io/diegoosoriob/paquetes
           TAG: ${{ github.sha }}
+          ports:
+            - "8081:8081"
         run: |
           docker build -t $IMAGE:$TAG -t $IMAGE:latest .
           docker push $IMAGE:$TAG
